@@ -1,3 +1,13 @@
+2009-01-05  Jon Nettleton  <jon.nettleton@gmail.com>
+
+	* src/via_cursor.c: (viaHWCursorInit), (viaUseHWCursorARGB),
+	(viaUseHWCursor):
+	* src/via_driver.c: (VIAScreenInit):
+
+	Missed a couple of changes for the chipset specific
+	cursors.  Moved chipset detection to HWInit.  Removed
+	some extraneous debugging.
+
 2009-01-04  Jon Nettleton  <jon.nettleton@gmail.com>
 
 	* src/via_cursor.c: (viaHWCursorInit), (viaCursorSetFB),
